--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.11",
+    "jquery": "^3.3.1",
+    "js-md5": "^0.7.3",
+    "md5": "^2.2.1",
+    "mint-ui": "^2.2.13",
+    "store": "^2.0.12",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-axios": "^2.1.4",
+    "vue-cookies": "^1.5.12",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
