--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.3",
+    "express-session": "^1.15.6",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "serve-favicon": "^2.5.0"
