--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.6",
+    "handlebars": "^4.0.12",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "serve-favicon": "^2.5.0"
