--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "socket.io": "^2.2.0"
   }
 }
