--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.15.6",
     "handlebars": "^4.0.12",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "serve-favicon": "^2.5.0"
   },
