--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.3",
     "express-session": "^1.15.6",
     "handlebars": "^4.0.12",
+    "jade": "^1.11.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
